--- a/index.htm
+++ b/index.htm
@@ -2,55 +2,70 @@
 <head>
 </head>
 <body>
-Welcome Partclone
+<img src="partclone-easy-logo.png"><br>
+<h2>Welcome Partclone</h2>
 
-Partclone is a project similar to the well-known backup utility "Partition Image" a.k.a partimage. Partclone provides utilities to back up and restore used-blocks of a partition and it is designed for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read and write the ext2 partition.
+<p>Partclone is a project similar to the well-known backup utility "Partition Image" a.k.a partimage. Partclone provides utilities to back up and restore used-blocks of a partition and it is designed for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read and write the ext2 partition.</p>
 
-Partclone supports ext2, ext3, ext4, hfs+, reiser3.5, reiser3.6, and reiser4. We plan to develop zfs and jfs file system. We made some utilies:
+<p>Partclone supports ext2, ext3, ext4, hfs+, reiser3.5, reiser3.6, and reiser4. We plan to develop zfs and jfs file system. We made some utilies:
 
-    * partclone.ext2, partclone.ext3, and partclone.extfs
-    * partclone.ext4 (need e2fsprogs-1.41.3 or higher version)
-    * partclone.reiserfs
-    * partclone.reiser4
-    * partclone.xfs
-    * partclone.fat
-    * partclone.hfsp
-    * partclone.ntfs
-    * partclone.ntfsreloc
-    * partclone.info 
+    <ul>
+    <li> partclone.ext2, partclone.ext3, and partclone.extfs
+    <li> partclone.ext4 (need e2fsprogs-1.41.3 or higher version)
+    <li> partclone.reiserfs
+    <li> partclone.reiser4
+    <li> partclone.xfs
+    <li> partclone.fat
+    <li> partclone.hfsp
+    <li> partclone.ntfs
+    <li> partclone.ntfsreloc
+    <li> partclone.info 
+    </ul>
 
 We will use some libraries to get bitmap which provide waht block is used. like:
 
-    * e2fsprogs support ext2, ext3, ext4!
-    * HFS Plus Volume Format support hfsplus (build-in)
-    * Reiser4 support reiser4
-    * ReiserFS support reiserFS
-    * XFS support xfs
-    * ntfsprogs support ntfs
+    <ul>
+    <li> e2fsprogs support ext2, ext3, ext4!
+    <li> HFS Plus Volume Format support hfsplus (build-in)
+    <li> Reiser4 support reiser4
+    <li> ReiserFS support reiserFS
+    <li> XFS support xfs
+    <li> ntfsprogs support ntfs
+    </ul>
+</p>
 
-NEWS
-    * ?
+<p>NEWS
+    <ul>
+    <li> ?
+    </ul>
 
 Download
 
-    * Download
-    * svn repository 
+    <ul>
+    <li> Download
+    <li> svn repository 
+    </ul>
 
 Installation
 
-    * Install from Source Code
-    * Install from DRBL(http://drbl.nchc.org.tw) Repository 
+    <ul>
+    <li> Install from Source Code
+    <li> Install from DRBL(http://drbl.nchc.org.tw) Repository 
+    </ul>
 
 Mailing List
 
-    * mail list 
-
-
-Project Admins: Thomas_Tsai
-Co-developer: Jazz Yao-Tsung Wang, Steven Shiau, Ceasar Sun
-Operating System: Linux
-License: GNU General Public License (GPL)
-Category: Backup
-Related Project: Diskless Remote Boot Linux (a.k.a DRBL), Clonezilla
+    <ul>
+    <li> mail list
+    </ul>
+</p>
+<p>
+Project Admins: Thomas_Tsai<br>
+Co-developer: Jazz Yao-Tsung Wang, Steven Shiau, Ceasar Sun<br>
+Operating System: Linux<br>
+License: GNU General Public License (GPL)<br>
+Category: Backup<br>
+Related Project: Diskless Remote Boot Linux (a.k.a DRBL), Clonezilla<br>
+</p>
 </body>
 </html>
