initial web page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,64 @@
+<!doctype html>
 <html>
-<head><title>test</title>
-</head>
-<body>
-test
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Partclone by Thomas-Tsai</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Partclone</h1>
+        <p>Partclone provides utilities to backup a partition smartly and it is designed for higher compatibility of the file system by using existing library.</p>
+        <p class="view"><a href="https://github.com/Thomas-Tsai/partclone">View the Project on GitHub <small>Thomas-Tsai/partclone</small></a></p>
+        <ul>
+          <li><a href="https://github.com/Thomas-Tsai/partclone/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Thomas-Tsai/partclone">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>Welcome to Partclone</h3>
+
+<p>Partclone is a project similar to the well-known backup utility "Partition Image" a.k.a partimage. Partclone provides utilities to back up and restore used-blocks of a partition and it is designed for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read and write the ext2 partition.</p>
+
+<p>Partclone now supports ext2, ext3, hfs+, reiser3.5, reiser3.6, reiser4, ext4 and btrfs.We made some utilies:</p>
+
+<pre><code>partclone.ext2, clone.ext3, clone.extfs
+partclone.ext4 (need e2fsprogs-1.41.3 or higher version)
+partclone.reiserfs
+partclone.reiser4
+partclone.xfs
+partclone.fat
+partclone.hfsp
+partclone.ntfs
+partclone.ufs
+partclone.vmfs
+partclone.jfs
+partclone.btrfs (based on btrfs-tools 0.19) 
+</code></pre>
+
+<h3>Team Information</h3>
+
+<p>Project Admins: Thomas_Tsai
+Co-developer: Jazz Yao-Tsung Wang, Steven Shiau, Ceasar Sun, Yavor Nikolov
+Operating System: Linux
+License: GNU General Public License (GPL)
+Related Project:  Diskless Remote Boot Linux (a.k.a DRBL),  Clonezilla </p>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/Thomas-Tsai">Thomas-Tsai</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
