--- a/template.html
+++ b/template.html
@@ -13,13 +13,9 @@
       <section>
       <div id=content>
       <!-- Thie is start of edit area -->
-	<h3>Contact Us</h3>
+        <h3>Welcome to Partclone Template</h3>
 	<p>
-	Mailing Lists: Mailing List<br />
-	Forums: Forum<br />
-	E-Mail: thomas _At_ nchc Dot org Dot tw<br />
-	Author's Blog in Chinese (中文): Thomas's Blog<br />
-	Our Related Project: Diskless Remote Boot Linux (a.k.a DRBL), Clonezilla, tuxboot<br />
+	This is Template file.
 	</p>
       <!-- Thie is end of edit area -->
       </div>
