--- a/download.html
+++ b/download.html
@@ -1,23 +1,56 @@
-<h4>Github</h4>
-<ul>
-          <li><a href="https://github.com/Thomas-Tsai/partclone/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Thomas-Tsai/partclone">View On <strong>GitHub</strong></a></li>
-</ul>
-<p class="view"><a href="https://github.com/Thomas-Tsai/partclone">View the Project on GitHub <small>Thomas-Tsai/partclone</small></a></p>
+<!doctype html>
+<html>
+  <head>
+    <script src="javascripts/jquery.js" type="text/javascript"></script>
+    <script src="javascripts/partclone.js" type="text/javascript"></script>
+    <script type="text/javascript">
+	updateHead();;
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+    <div id="header"></div>
+      <section>
+      <div id=content>
+      <!-- Thie is start of edit area -->
+      <h3>You can look for partclone at:</h3>
+	    <h4>Github</h4>
+	    <ul>
+		      <li><a href="https://github.com/Thomas-Tsai/partclone/zipball/master">Download <strong>ZIP File</strong></a></li>
+		      <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/master">Download <strong>TAR Ball</strong></a></li>
+		      <li><a href="https://github.com/Thomas-Tsai/partclone">View On <strong>GitHub</strong></a></li>
+	    </ul>
 
-<h4>SourceForge</h4>
-<p>
-You can get static deb ,rpm and source code from Sourceforge.
-download: <a href="http://sourceforge.net/projects/partclone/files/" title="Sourceforge" target="_blank">SourceForge</a>
-</p>
+	    <h4>SourceForge</h4>
+	    <p>
+	    You can get static deb ,rpm and source code from Sourceforge.
+	    download: <a href="http://sourceforge.net/projects/partclone/files/" title="Sourceforge" target="_blank">SourceForge</a>
+	    </p>
 
-<h4>Mirror List</h4>
-<p>
-NCHC, Taiwan:  <a href="http://partclone.nchc.org.tw/download/stable/" title="stable" target="_blank" >stable</a>  <a href="http://partclone.nchc.org.tw/download/testing/" title="testing" target="_blank" >testing</a> <a href="http://partclone.nchc.org.tw/download/misc/" title="misc" target="_blank" >misc</a>
-</p>
+	    <h4>Mirror List</h4>
+	    <p>
+	    Download from NCHC, Taiwan:  
+	    <ul>
+		<li><a href="http://partclone.nchc.org.tw/download/stable/" title="stable version for partclone download" target="_blank" >stable</a></li>
+		<li><a href="http://partclone.nchc.org.tw/download/testing/" title="testing version for partclone download" target="_blank" >testing</a></li>
+		<li><a href="http://partclone.nchc.org.tw/download/misc/" title="misc for partclone download" target="_blank" >misc</a></li>
+	    </ul>
+	    </p>
 
-<h4>Clonezilla</h4>
-<p>
-You can use clonezilla which is an integrated tool to back your disk/partition. Clonezilla, based on DRBL, Partition Image, ntfsclone, partclone, and udpcast, allows you to do bare metal backup and recovery. <a href="http://www.clonezilla.org" title="clonezilla" target="_blank" >go to clonezilla</a>
-</p>
+	    <h4>Clonezilla</h4>
+	    <p>
+	    You can use clonezilla which is an integrated tool to back your disk/partition. Clonezilla, based on DRBL, Partition Image, ntfsclone, partclone, and udpcast, allows you to do bare metal backup and recovery. <a href="http://www.clonezilla.org" title="clonezilla" target="_blank" >go to clonezilla</a>
+	    </p>
+      <!-- Thie is end of edit area -->
+      </div>
+      </section>
+
+      <div id="footer"></div>
+      </div>
+    <script type="text/javascript">
+	loadLayout();
+    </script>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
+</html>
