--- a/features.html
+++ b/features.html
@@ -1,99 +1,127 @@
-<p><strong>Partclone is a project similar to the well-known backup utility "Partition Image" a.k.a partimage.</strong></p>
-<p><strong>Partclone</strong> provides utilities to back up and restore used-blocks of a partition and it is designed for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read and write the ext2 partition.</p.
-<p><h4>Supported Filesystem</h4>
-<table>
-<tr>
-<th>FS</th>
-<th>Library</th>
-<th>Utility</th>
-</tr>
-<tr>
-<td>Btrfs</td>
-<td>btrfs-tools</td>
-<td>partclone.btrfs</td>
-</tr>
-<tr>
-<td>Ext2</td>
-<td>e2fsprogs</td>
-<td>partclone.ext2 or partclone.extfs</td>
-</tr>
-<tr>
-<td>Ext3</td>
-<td>e2fsprogs</td>
-<td>partclone.ext3 or partclone.extfs</td>
-</tr>
-<tr>
-<td>Ext4</td>
-<td>e2fsprogs</td>
-<td>partclone.ext4 or partclone.extfs</td>
-</tr>
-<tr>
-<td>Reiserfs</td>
-<td>libreiserfs</td>
-<td>partclone.reiserfs</td>
-</tr>
-<tr>
-<td>Reiser4</td>
-<td>reiser4progs</td>
-<td>partclone.reiser4</td>
-</tr>
-<tr>
-<td>XFS</td>
-<td>xfslibs</td>
-<td>partclone.xfs</td>
-</tr>
-<tr>
-<td>JFS</td>
-<td>jfsutils</td>
-<td>partclone.jfs</td>
-</tr>
-<tr>
-<td>NTFS</td>
-<td>ntfsprogs</td>
-<td>partclone.ntfs</td>
-</tr>
-<tr>
-<td>FAT 12</td>
-<td>X</td>
-<td>partclone.fat12 or partclone.vfat</td>
-</tr>
-<tr>
-<td>FAT 16</td>
-<td>X</td>
-<td>partclone.fat16 or partclone.vfat</td>
-</tr>
-<tr>
-<td>FAT 32</td>
-<td>X</td>
-<td>partclone.fat32 or partclone.vfat</td>
-</tr>
-<tr>
-<td>HFS plus</td>
-<td>X(ref:HFS Plus Volume Format)</td>
-<td>partclone.hfsplus , partclone.hfsp or partclone.hfs+</td>
-</tr>
-<tr>
-<td>UFS2</td>
-<td>ufsutilies</td>
-<td>partclone.ufs</td>
-</tr>
-<tr>
-<td>VMFS</td>
-<td>vmfstools</td>
-<td>partclone.vmfs</td>
-</tr>
-</table>
-<h4>Other Feature</h4>
-<table>
-<tr>
-<td>dd</td>
-<td>raw copy any file</td>
-<td>partclone.dd</td>
-</tr>
-<tr>
-<td>imgchk</td>
-<td>check image file</td>
-<td>partclone.chkimg</td>
-</tr>
-<tr>
-</table></p>
+<!doctype html>
+<html>
+  <head>
+    <script src="javascripts/jquery.js" type="text/javascript"></script>
+    <script src="javascripts/partclone.js" type="text/javascript"></script>
+    <script type="text/javascript">
+	updateHead();;
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+    <div id="header"></div>
+      <section>
+      <div id=content>
+      <!-- Thie is start of edit area -->
+	    <p><strong>Partclone is a project similar to the well-known backup utility "Partition Image" a.k.a partimage.</strong></p>
+	    <p><strong>Partclone</strong> provides utilities to back up and restore used-blocks of a partition and it is designed for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read and write the ext2 partition.</p.
+	    <p><h4>Supported Filesystem</h4>
+	    <table>
+	    <tr>
+	    <th>FS</th>
+	    <th>Library</th>
+	    <th>Utility</th>
+	    </tr>
+	    <tr>
+	    <td>Btrfs</td>
+	    <td>btrfs-tools</td>
+	    <td>partclone.btrfs</td>
+	    </tr>
+	    <tr>
+	    <td>Ext2</td>
+	    <td>e2fsprogs</td>
+	    <td>partclone.ext2 or partclone.extfs</td>
+	    </tr>
+	    <tr>
+	    <td>Ext3</td>
+	    <td>e2fsprogs</td>
+	    <td>partclone.ext3 or partclone.extfs</td>
+	    </tr>
+	    <tr>
+	    <td>Ext4</td>
+	    <td>e2fsprogs</td>
+	    <td>partclone.ext4 or partclone.extfs</td>
+	    </tr>
+	    <tr>
+	    <td>Reiserfs</td>
+	    <td>libreiserfs</td>
+	    <td>partclone.reiserfs</td>
+	    </tr>
+	    <tr>
+	    <td>Reiser4</td>
+	    <td>reiser4progs</td>
+	    <td>partclone.reiser4</td>
+	    </tr>
+	    <tr>
+	    <td>XFS</td>
+	    <td>xfslibs</td>
+	    <td>partclone.xfs</td>
+	    </tr>
+	    <tr>
+	    <td>JFS</td>
+	    <td>jfsutils</td>
+	    <td>partclone.jfs</td>
+	    </tr>
+	    <tr>
+	    <td>NTFS</td>
+	    <td>ntfsprogs</td>
+	    <td>partclone.ntfs</td>
+	    </tr>
+	    <tr>
+	    <td>FAT 12</td>
+	    <td>X</td>
+	    <td>partclone.fat12 or partclone.vfat</td>
+	    </tr>
+	    <tr>
+	    <td>FAT 16</td>
+	    <td>X</td>
+	    <td>partclone.fat16 or partclone.vfat</td>
+	    </tr>
+	    <tr>
+	    <td>FAT 32</td>
+	    <td>X</td>
+	    <td>partclone.fat32 or partclone.vfat</td>
+	    </tr>
+	    <tr>
+	    <td>HFS plus</td>
+	    <td>X(ref:HFS Plus Volume Format)</td>
+	    <td>partclone.hfsplus , partclone.hfsp or partclone.hfs+</td>
+	    </tr>
+	    <tr>
+	    <td>UFS2</td>
+	    <td>ufsutilies</td>
+	    <td>partclone.ufs</td>
+	    </tr>
+	    <tr>
+	    <td>VMFS</td>
+	    <td>vmfstools</td>
+	    <td>partclone.vmfs</td>
+	    </tr>
+	    </table>
+	    <h4>Other Feature</h4>
+	    <table>
+	    <tr>
+	    <td>dd</td>
+	    <td>raw copy any file</td>
+	    <td>partclone.dd</td>
+	    </tr>
+	    <tr>
+	    <td>imgchk</td>
+	    <td>check image file</td>
+	    <td>partclone.chkimg</td>
+	    </tr>
+	    <tr>
+	    </table></p>
+      <!-- Thie is end of edit area -->
+      </div>
+      </section>
+
+      <div id="footer"></div>
+      </div>
+    <script type="text/javascript">
+	loadLayout();
+    </script>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
+</html>
