--- a/news.html
+++ b/news.html
@@ -1,34 +1,33 @@
+<!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="author" content="Thomas Tsai" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-    <link href="http://freshmeat.net/projects/partclone/releases.atom" rel="alternate" title="freshmeat.net releases feed for Partclone" type="application/atom+xml" />
-    <link REL="SHORTCUT ICON" HREF="http://partclone.org/images/favicon.ico">
-    
-    <title>Partclone</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <script src="javascripts/jquery.js" type="text/javascript"></script>
-
-
+    <script src="javascripts/partclone.js" type="text/javascript"></script>
+    <script type="text/javascript">
+	updateHead();;
+    </script>
   </head>
   <body>
-  <h3>Auto load from SourceForge</h3>
-  <small><a href="http://sourceforge.net/news/?group_id=183378">read more</a></small>
-  <div id="news">
-  
-  </div>
+    <div class="wrapper">
+    <div id="header"></div>
+      <section>
+      <div id=content>
+	<!-- Thie is start of edit area -->
+        <h3>Auto load from SourceForge</h3>
+	<div id="news">	</div>
+	<div align="right"><a href="http://sourceforge.net/news/?group_id=183378">read more</a></div>
+	<script type="text/javascript">
+	    $('#news').load('http://sourceforge.net/news/?group_id=183378 #feedList');    
+	</script>
+	<!-- Thie is end of edit area -->
+      </div>
+      </section>
+      <div id="footer"></div>
+      </div>
     <script type="text/javascript">
-	$('#news').load('http://sourceforge.net/news/?group_id=183378 #feedList');    
+	loadLayout();
     </script>
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
-  </html>
-
+</html>
