--- a/usage/partclone.xxxfs.8.html
+++ b/usage/partclone.xxxfs.8.html
@@ -1,28 +1,26 @@
-<!doctype html>
-<html>
-  <head>
-    <script src="javascripts/jquery.js" type="text/javascript"></script>
-    <script src="javascripts/partclone.js" type="text/javascript"></script>
-    <script type="text/javascript">
-	updatehead();;
-    </script>
-  </head>
-  <body>
+Content-type: text/html
 
-<H1>partclone.dd</H1>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML><HEAD><TITLE>Man page of partclone.extfs</TITLE>
+</HEAD><BODY>
+<H1>partclone.extfs</H1>
+Section: Maintenance Commands (8)<BR>Updated: Nov 2007<BR><A HREF="#index">Index</A>
+<A HREF="/cgi-bin/man/man2html">Return to Main Contents</A><HR>
+
 <A NAME="lbAB">&nbsp;</A>
 <H2>NAME</H2>
-partclone.dd - The utility to clone/restore raw file like dd.
+
+partclone.extfs - The utility for clone and restore an etx2/ext3 partition.
 <A NAME="lbAC">&nbsp;</A>
 <H2>SYNOPSIS</H2>
 
-partclone.dd [options]... [MODE] [SOURCE FILE] [OUTPUT FILE]
+partclone.extfs [options]... [MODE] [SOURCE FILE] [OUTPUT FILE]
 <A NAME="lbAD">&nbsp;</A>
 <H2>DESCRIPTION</H2>
 
-<B>partclone.dd</B>
+<B>partclone.extfs</B>
 
-is a part of Partclone project.
+is a part of Partclone project for ext2/3 file system.
 Partclone is a project like the well-known backup utility &quot;Partition Image&quot; a.k.a partimage. Partclone provide utilities to back up used blocks and design for higher compatibility of the file system using supported library like e2fslibs.
 <A NAME="lbAE">&nbsp;</A>
 <H2>OPTIONS</H2>
@@ -40,78 +38,93 @@ Output FILE, overwriting if exists
 
 <DD>
 Source FILE
-<DT>
+<DT><B>-L,  --logfile FILE     </B>
+
 <DD>
--L,  --logfile FILE     
 Log FILE
-<DT>
+<DT><B>-c,  --clone            </B>
+
 <DD>
--c,  --clone            
 Save to the special image format
-<DT>
+<DT><B>-r,  --restore          </B>
+
 <DD>
--r,  --restore          
 Restore from the special image format
-<DT>
+<DT><B>-b,  --dev-to-dev       </B>
+
 <DD>
--b,  --dev-to-dev       
 Local device to device copy mode
-<DT>
+<DT><B>-D,  --domain</B>
+
 <DD>
--R,  --rescue           
+Create GNU Ddrescue domain log file from source device
+<DT><B><BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;--offset_domain=X</B>
+
+<DD>
+Add X (in bytes) to all positions reported in the domain log file
+<DT><B>-R,  --rescue           </B>
+
+<DD>
 Continue after disk read errors
-<DT>
+<DT><B>-dX, --debug=X          </B>
+
 <DD>
--dX, --debug=X          
 Set the debug level to X = [0|1|2]
-<DT>
+<DT><B>-C,  --no_check         </B>
+
 <DD>
--C,  --no_check         
 Don't check device size and free space
-<DT>
+<DT><B>-X,  --dialog           </B>
+
 <DD>
--X,  --dialog           
 Output message as Dialog Format
-<DT>
+<DT><B>-I,  --ignore_fschk     </B>
+
 <DD>
--I,  --ignore_fschk     
 Ignore filesystem check
-<DT>
+<DT><B>--ignore_crc       </B>
+
 <DD>
---ignore_crc       
 Ignore crc check error
-<DT>
+<DT><B>-F,  --force            </B>
+
 <DD>
--F,  --force            
 Force progress
-<DT>
+<DT><B>-f,  --UI-fresh         </B>
+
 <DD>
--f,  --UI-fresh         
 Fresh times of progress
-<DT>
+<DT><B>-q,  --quiet            </B>
+
 <DD>
--q,  --quiet            
 quiet mode, no progress update
-<DT>
+<DT><B>-v,  --version          </B>
+
 <DD>
--v,  --version          
 Display partclone version
-<DT>
+<DT><B>-h,  --help             </B>
+
 <DD>
--h,  --help             
 Display this help
 </DL>
 <A NAME="lbAF">&nbsp;</A>
 <H2>Examples:</H2>
 
 <P>
-clone /dev/hda1 to hda1.dd.img and display debug information.
+clone /dev/hda1 to hda1.img and display debug information.
 <P>
-partclone.dd -c -d -s /dev/hda1 -o hda1.dd.img
+partclone.extfs -c -d -s /dev/hda1 -o hda1.img
 <P>
-restore /dev/hda1 from hda1.dd.img and display debug information.
+restore /dev/hda1 from hda1.img and display debug information.
 <P>
-partclone.dd -r -d -s hda1.dd.img -o /dev/hda1
+partclone.extfs -r -d -s hda1.img -o /dev/hda1
+<P>
+restore image from clonezilla(split, gzip,) with stdin source
+<P>
+<P>
+<P>
+cat sda1.ext3-ptcl-img.gz.a* &gt; gunzip -c | partclone.ext3 -d -r -s - -o /dev/sda1
+<P>
 <P>
 <A NAME="lbAG">&nbsp;</A>
 <H2>REPORTING BUGS</H2>
@@ -144,4 +157,6 @@ This manual page was written by Thomas Tsai &lt;<A HREF="mailto:thomas@nchc.org.
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 05:37:24 GMT, April 13, 2011
+Time: 16:06:14 GMT, May 21, 2012
+</BODY>
+</HTML>
