--- a/usage/partclone.xxxfs.8.html
+++ b/usage/partclone.xxxfs.8.html
@@ -5,7 +5,7 @@ Content-type: text/html
 </HEAD><BODY>
 <H1>partclone.extfs</H1>
 Section: Maintenance Commands (8)<BR>Updated: Nov 2007<BR><A HREF="#index">Index</A>
-<A HREF="/cgi-bin/man/man2html">Return to Main Contents</A><HR>
+<A HREF="usage/">Return to Main Contents</A><HR>
 
 <A NAME="lbAB">&nbsp;</A>
 <H2>NAME</H2>
@@ -155,8 +155,8 @@ This manual page was written by Thomas Tsai &lt;<A HREF="mailto:thomas@nchc.org.
 </DL>
 <HR>
 This document was created by
-<A HREF="/cgi-bin/man/man2html">man2html</A>,
+<A HREF="usage/">man2html</A>,
 using the manual pages.<BR>
-Time: 16:06:14 GMT, May 21, 2012
+Time: 00:20:21 GMT, May 22, 2012
 </BODY>
 </HTML>
