we can start debug

--- a/usage_all.html
+++ b/usage_all.html
@@ -14,11 +14,13 @@
       <div id=content>
       <!-- Thie is start of edit area -->
         <h3>Welcome to Partclone Usage</h3>
+	<p>All partclone utilities named prefix partclone.blabla... It's just like mkfs.xxx or mount.xxx and easy to remember. The list is our man pages made from man2html or just run man partclone to access manual from linux system.</p>
 	<ul>
-	<li><a href="javascript:loadUsage('usage/partclone.xxxfs.8.html');">partclone.xxxfs</a></li>
-	<li><a href="javascript:loadUsage('usage/partclone.dd.8.html');">partclone.dd</a></li>
-	<li><a href="javascript:loadUsage('usage/partclone.chkimg.8.html');">partclone.chkimg</a></li>
-	<li><a href="javascript:loadUsage('usage/partclone.info.8.html');">partclone.info</a></li>
+	<li><a href="javascript:loadUsage('usage/partclone.xxxfs.8.html');">partclone.xxxfs</a> <br \>The man page is for all utilities name with end of [xxx]fs, e.g. reiserfs. All file system share same options and features.</li>
+	<li><a href="javascript:loadUsage('usage/partclone.restore.8.html');">partclone.restore</a><br \>The special man page for restore only.</li>
+	<li><a href="javascript:loadUsage('usage/partclone.dd.8.html');">partclone.dd</a><br \>The special man page for partclone.dd only.</li>
+	<li><a href="javascript:loadUsage('usage/partclone.chkimg.8.html');">partclone.chkimg</a><br \>The special man page for partclone.chkimg only.</li>
+	<li><a href="javascript:loadUsage('usage/partclone.info.8.html');">partclone.info</a><br \>The special man page for partclone.info only.</li>
 	</ul>
 
 	<div id=usage></div>
