--- a/features.html
+++ b/features.html
@@ -13,9 +13,11 @@
       <section>
       <div id=content>
       <!-- Thie is start of edit area -->
-	    <p><strong>Partclone is a project similar to the well-known backup utility "Partition Image" a.k.a partimage.</strong></p>
-	    <p><strong>Partclone</strong> provides utilities to back up and restore used-blocks of a partition and it is designed for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read and write the ext2 partition.</p.
-	    <p><h4>Supported Filesystem</h4>
+	    <h3>Features</h3>
+	    <p><strong>Partclone</strong> provides utilities to back up and restore used-blocks of a partition and it is designed for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read and write the ext2 partition.</p>
+	    <p><strong>Partclone</strong> try to support all file systems in the world. We spend much time to do this and continual develop for new file systame. Partclone is an <strong>image engine,</strong> not only <strong>clone</strong> file system to image or <strong>restore</strong> from image, but also <strong>duplicate</strong> devices. It also support <strong>pipe, stdin and stdout</strong> which is helpful for advanced administrator to script special features via partclone utilities. For <strong>rescue</strong> situation, our rescue mode can skip broken blocks and backup all healthy block to save your device. Ddrescue is better to save broken data with partclone which support list all used blocks as <strong>domain file</strong> to make ddrescue smarter and faster. All Partclone utilities is text mode and <strong>nurses</strong> interface, if you prefer save more resource, <strong>quiet mode</strong> is also nice. All backup blocks is vertified by <strong>crc32</strong> to make sure your data is correct. Please check our <a href="usage_all.html" alt="usage of partclone" ><strong>usage</strong></a> to get more information.</p>
+
+	    <p><h3>Supported Filesystem</h3>
 	    <table>
 	    <tr>
 	    <th>FS</th>
@@ -98,7 +100,7 @@
 	    <td>partclone.vmfs</td>
 	    </tr>
 	    </table>
-	    <h4>Other Feature</h4>
+	    <h3>Other Feature</h3>
 	    <table>
 	    <tr>
 	    <td>dd</td>
@@ -111,6 +113,25 @@
 	    <td>partclone.chkimg</td>
 	    </tr>
 	    <tr>
+	    <td>imginfo</td>
+	    <td>list image head information</td>
+	    <td>partclone.info</td>
+	    </tr>
+	    <tr>
+	    <td>restore</td>
+	    <td>restore any image made from partclone</td>
+	    <td>partclone.restore</td>
+	    </tr>
+	    <tr>
+	    <td>ntfs reloc</td>
+	    <td>deals with braindeadness with moving NTFS filesystems</td>
+	    <td>partclone.ntfsreloc</td>
+	    </tr>
+	    <tr>
+	    <td>vmfs type</td>
+	    <td>get vmfs type</td>
+	    <td>partclone.VMFS_volume_member</td>
+	    </tr>
 	    </table></p>
       <!-- Thie is end of edit area -->
       </div>
