--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 	<p>Partclone now supports ext2, ext3, hfs+, reiser3.5, reiser3.6, reiser4, ext4 and btrfs.We made some utilies:</p>
 
-	<pre><code>partclone.ext2, clone.ext3, clone.extfs
+	<pre>
+	partclone.ext2, clone.ext3, clone.extfs
 	partclone.ext4 (need e2fsprogs-1.41.3 or higher version)
 	partclone.reiserfs
 	partclone.reiser4
@@ -30,16 +31,18 @@
 	partclone.vmfs
 	partclone.jfs
 	partclone.btrfs (based on btrfs-tools 0.19) 
-	</code></pre>
+	</pre>
 
-	<h3>Team Information</h3>
+	<h3>Our Team Information</h3>
 
 	<p>
 	Project Admins: Thomas_Tsai <br />
-	Co-developer: Jazz Yao-Tsung Wang, Steven Shiau, Ceasar Sun, Yavor Nikolov<br />
+	Co-developer: Jazz Yao-Tsung Wang, Steven Shiau, Ceasar Sun<br />
 	Operating System: Linux<br />
 	License: GNU General Public License (GPL)<br />
-	Related Project:  Diskless Remote Boot Linux (a.k.a DRBL),  Clonezilla <br /></p>
+	Related Project:  Diskless Remote Boot Linux (a.k.a DRBL),  Clonezilla <br />
+
+	</p>
       </div>
       </section>
 
