remove param.json

--- a/index.html
+++ b/index.html
@@ -19,18 +19,17 @@
 	<p>Partclone now supports ext2, ext3, hfs+, reiser3.5, reiser3.6, reiser4, ext4 and btrfs.We made some utilies:</p>
 
 	<pre>
-	partclone.ext2, clone.ext3, clone.extfs
-	partclone.ext4 (need e2fsprogs-1.41.3 or higher version)
+	partclone.btrfs
+	partclone.ext2, partclone.ext3, partclone.ext4
+	partclone.fat32, partclone.fat12, partclone.fat16
+	partclone.hfsp
+	partclone.jfs
+	partclone.ntfs
 	partclone.reiserfs
 	partclone.reiser4
+	partclone.ufs (with SU+J)
+	partclone.vmfs (v3 and v5)
 	partclone.xfs
-	partclone.fat
-	partclone.hfsp
-	partclone.ntfs
-	partclone.ufs
-	partclone.vmfs
-	partclone.jfs
-	partclone.btrfs (based on btrfs-tools 0.19) 
 	</pre>
 
 	<h3>Our Team Information</h3>
