--- a/help.html
+++ b/help.html
@@ -15,9 +15,16 @@
       <!-- Thie is start of edit area -->
 	<h3>Help</h3>
 	<h4>FAQ</h4>
-	<p>not finishing</p>
+	    <p>not yet ready</p>
 	<h4>Documents</h4>
-	<p>The tech report in chinese</p>
+	<ul>
+	    <li>The tech report in chinese</li>
+	</ul>
+	<h4>Bug report</h4>
+	<ul>
+	    <li>Source forge bug report</li>
+	    <li>github issue</li>
+	</ul>
 	<h4>Contact Us</h4>
 	<p>
 	<ul>
