add screenshot and paper

--- a/download.html
+++ b/download.html
@@ -17,22 +17,20 @@
 	    <h4>Github</h4>
 	    <ul>
 		      <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/master">Download <strong>TAR Ball</strong></a></li>
-		      <li><a href="https://github.com/Thomas-Tsai/partclone">View On <strong>GitHub</strong></a></li>
+		      <li><a href="https://github.com/Thomas-Tsai/partclone">View Source Code On <strong>GitHub</strong></a></li>
+	    </ul>
+	    <h4>Debian Package</h4>
+	    <ul>
+		<li><a href="http://packages.debian.org/source/sid/partclone" target="_blank" alt="download debian sid package">sid</a></li>
+		<li><a href="http://packages.debian.org/source/wheezy/partclone" target="_blank" alt="download debian wheezy package">wheezy</a></li>
 	    </ul>
 
 	    <h4>SourceForge</h4>
 	    <p>
-	    You can get static deb ,rpm and source code from Sourceforge.
-	    download: <a href="http://sourceforge.net/projects/partclone/files/" title="Sourceforge" target="_blank">SourceForge</a>
-	    </p>
-
-	    <h4>Mirror List</h4>
-	    <p>
-	    Download from NCHC, Taiwan:  
+	    You can get <strong>static</strong> deb ,rpm and source code from Sourceforge.download from SourceForge or mirror in NCHC, Taiwan.
 	    <ul>
-		<li><a href="http://partclone.nchc.org.tw/download/stable/" title="stable version for partclone download" target="_blank" >stable</a></li>
-		<li><a href="http://partclone.nchc.org.tw/download/testing/" title="testing version for partclone download" target="_blank" >testing</a></li>
-		<li><a href="http://partclone.nchc.org.tw/download/misc/" title="misc for partclone download" target="_blank" >misc</a></li>
+		<li><a href="http://sourceforge.net/projects/partclone/files/" title="partclone download from sourceforge" target="_blank" >SourceForge Download</a></li>
+		<li><a href="http://partclone.nchc.org.tw/download/" title="partclone download from NCHC Taiwan" target="_blank" >NCHC Taiwan</a></li>
 	    </ul>
 	    </p>
 
