--- a/help.html
+++ b/help.html
@@ -14,16 +14,17 @@
       <div id=content>
       <!-- Thie is start of edit area -->
 	<h3>Help</h3>
+	<img src="images/screen-of-partclone-tech-report.png" style="float: right; margin: 12px" border="1" />
 	<h4>FAQ</h4>
 	    <p>not yet ready</p>
 	<h4>Documents</h4>
 	<ul>
-	    <li>The tech report in chinese</li>
+	    <li>The tech report in chinese zh-TW <a href="paper/partclone-tech-report-2011.pdf" alt="download pdf version of tech report">[PDF]</a></li>
 	</ul>
 	<h4>Bug report</h4>
 	<ul>
-	    <li>Source forge bug report</li>
-	    <li>github issue</li>
+	    <li><a href="https://sourceforge.net/tracker/?func=browse&group_id=183378&atid=905000" target="_blank" alt="bug report to source forge" >Source forge bug report</a></li>
+	    <li><a href="https://github.com/Thomas-Tsai/partclone/issues" target="_blank" alt="bug report to github" >github issue tracking</a></li>
 	</ul>
 	<h4>Contact Us</h4>
 	<p>
