--- a/layout.html
+++ b/layout.html
@@ -1,12 +1,12 @@
       <!-- The start of header block  -->
       <div id="header">
       <header>
-        <img src="images/partclone-easy-logo.png" height="110" alt="partclone-logo" />
+        <a href="index.html" alt="partclone home page"><img src="images/partclone-easy-logo.png" height="110" alt="partclone-logo" /></a>
         <h1>Partclone</h1>
         <p>Partclone provides utilities to smartly backup partitions. Partclone is written in C and designed for higher compatibility by using existing file system library.</p>
 	<ul>
           <li><a href="https://github.com/Thomas-Tsai/partclone" target="blank" alt="View partclone source code on github">View On <strong>GitHub</strong></a></li>
-          <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/master" alt="Download latest develop version">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/stable" alt="Download latest develop version">Download <strong>TAR Ball</strong></a></li>
           <li><a href="http://clonezilla.org" target="blank" alt="Clonezilla is based on partclone to image or clone a partition">Clonezilla<strong>TryOut</strong></a></li>
 	</ul>
 	
