--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
       <div id=content>
 	<!-- Thie is start of edit area -->
         <h3>Auto load from SourceForge</h3>
-	<div id="news">	</div>
+	<div id="news"> Loading...</div>
 	<div align="right"><a href="http://sourceforge.net/news/?group_id=183378">read more</a></div>
 	<script type="text/javascript">
 	    $('#news').load('http://sourceforge.net/news/?group_id=183378 #feedList');    
