--- a/index.html
+++ b/index.html
@@ -9,48 +9,47 @@
   </head>
   <body>
     <div class="wrapper">
-    <div id="header"></div>
+      <header><div id="header"></div></header>
       <section>
-      <div id=content>
-        <h3>Welcome to Partclone</h3>
-
-	<p>Partclone is a project similar to the well-known backup utility "Partition Image" a.k.a partimage. Partclone provides utilities to back up and restore used-blocks of a partition and it is designed for higher compatibility of the file system by using existing library, e.g. e2fslibs is used to read and write the ext2 partition.</p>
-
-	<p>Partclone now supports ext2, ext3, hfs+, reiser3.5, reiser3.6, reiser4, ext4 and btrfs.We made some utilies:</p>
-
-	<pre>
-	partclone.btrfs
-	partclone.ext2, partclone.ext3, partclone.ext4
-	partclone.fat32, partclone.fat12, partclone.fat16
-	partclone.hfsp
-	partclone.jfs
-	partclone.ntfs
-	partclone.reiserfs
-	partclone.reiser4
-	partclone.ufs (with SU+J)
-	partclone.vmfs (v3 and v5)
-	partclone.xfs
-	</pre>
-
-	<h3>Our Team Information</h3>
-
-	<p>
-	Project Admins: Thomas_Tsai <br />
-	Co-developer: Jazz Yao-Tsung Wang, Steven Shiau, Ceasar Sun<br />
-	Operating System: Linux<br />
-	License: GNU General Public License (GPL)<br />
-	Related Project:  Diskless Remote Boot Linux (a.k.a DRBL),  Clonezilla <br />
-
-	</p>
+      <!-- replace template as new block which defined in layout.html-->
+      <div id="index"></div>
+      <!-- done-->
+      <div id="google-ads">
+	<script type="text/javascript">
+	<!--
+	google_ad_client = "pub-9507710613356481";
+	/* 728x90, 已建立 2009/5/10 */
+	google_ad_slot = "2482010893";
+	google_ad_width = 728;
+	google_ad_height = 90;
+	//-->
+	</script>
+	<script type="text/javascript"	src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+	<br />
+	<script type="text/javascript">
+	<!--
+	google_ad_client = "pub-9507710613356481";
+	/* 728x90, figure,  2009/5/11 */
+	google_ad_slot = "9508274001";
+	google_ad_width = 728;
+	google_ad_height = 90;
+	//-->
+	</script>
+	<script type="text/javascript"	src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+      
       </div>
       </section>
-
-      <div id="footer"></div>
+      <footer><div id="footer"></div></footer>
       </div>
-    <script type="text/javascript">
-	loadLayout();
-    </script>
     <script src="javascripts/scale.fix.js"></script>
     
+    <script type="text/javascript">
+	$(document).ready(function(){
+	loadLayout();
+	//<!-- replace template as new block which defined in layout.html-->
+	$('#index').load('layout.html #index');
+	//<!-- done-->
+	});
+    </script>
   </body>
 </html>
