--- a/template.html
+++ b/template.html
@@ -9,24 +9,47 @@
   </head>
   <body>
     <div class="wrapper">
-    <div id="header"></div>
+      <header><div id="header"></div></header>
       <section>
-      <div id=content>
-      <!-- Thie is start of edit area -->
-        <h3>Welcome to Partclone Template</h3>
-	<p>
-	This is Template file.
-	</p>
-      <!-- Thie is end of edit area -->
+      <!-- replace template as new block which defined in layout.html-->
+      <div id="template"></div>
+      <!-- done-->
+      <div id="google-ads">
+	<script type="text/javascript">
+	<!--
+	google_ad_client = "pub-9507710613356481";
+	/* 728x90, 已建立 2009/5/10 */
+	google_ad_slot = "2482010893";
+	google_ad_width = 728;
+	google_ad_height = 90;
+	//-->
+	</script>
+	<script type="text/javascript"	src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+	<br />
+	<script type="text/javascript">
+	<!--
+	google_ad_client = "pub-9507710613356481";
+	/* 728x90, figure,  2009/5/11 */
+	google_ad_slot = "9508274001";
+	google_ad_width = 728;
+	google_ad_height = 90;
+	//-->
+	</script>
+	<script type="text/javascript"	src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+      
       </div>
       </section>
-
-      <div id="footer"></div>
+      <footer><div id="footer"></div></footer>
       </div>
-    <script type="text/javascript">
-	loadLayout();
-    </script>
     <script src="javascripts/scale.fix.js"></script>
     
+    <script type="text/javascript">
+	$(document).ready(function(){
+	loadLayout();
+	//<!-- replace template as new block which defined in layout.html-->
+	$('#template').load('layout.html #template');
+	//<!-- done-->
+	});
+    </script>
   </body>
 </html>
