--- a/download.html
+++ b/download.html
@@ -9,23 +9,45 @@
   </head>
   <body>
     <div class="wrapper">
-      <header><div id="header"></div></header>
+    <div id="header"></div>
       <section>
-      <!-- replace template as new block which defined in layout.html-->
-      <div id="download"></div>
-      <!-- done-->
-      </section>
-      <footer><div id="footer"></div></footer>
+      <div id="download">
+      <!-- Thie is start of edit area -->
+      <h3>You can look for partclone at:</h3>
+	    <h4>Github</h4>
+	    <ul>
+		      <li><a href="https://github.com/Thomas-Tsai/partclone/tarball/master">Download <strong>TAR Ball</strong></a></li>
+		      <li><a href="https://github.com/Thomas-Tsai/partclone">View Source Code On <strong>GitHub</strong></a></li>
+	    </ul>
+	    <h4>Debian Package</h4>
+	    <ul>
+		<li><a href="http://packages.debian.org/source/sid/partclone" target="_blank" alt="download debian sid package">sid</a></li>
+		<li><a href="http://packages.debian.org/source/wheezy/partclone" target="_blank" alt="download debian wheezy package">wheezy</a></li>
+	    </ul>
+
+	    <h4>SourceForge</h4>
+	    <p>
+	    You can get <strong>static</strong> deb ,rpm and source code from Sourceforge.download from SourceForge or mirror in NCHC, Taiwan.
+	    <ul>
+		<li><a href="http://sourceforge.net/projects/partclone/files/" title="partclone download from sourceforge" target="_blank" >SourceForge Download</a></li>
+		<li><a href="http://partclone.nchc.org.tw/download/" title="partclone download from NCHC Taiwan" target="_blank" >NCHC Taiwan</a></li>
+	    </ul>
+	    </p>
+
+	    <h4>Clonezilla</h4>
+	    <p>
+	    You can use clonezilla which is an integrated tool to back your disk/partition. Clonezilla, based on DRBL, Partition Image, ntfsclone, partclone, and udpcast, allows you to do bare metal backup and recovery. <a href="http://www.clonezilla.org" title="clonezilla" target="_blank" >go to clonezilla</a>
+	    </p>
+      <!-- Thie is end of edit area -->
       </div>
+      </section>
+
+      <div id="footer"></div>
+      </div>
+    <script type="text/javascript">
+	loadLayout();
+    </script>
     <script src="javascripts/scale.fix.js"></script>
     
-    <script type="text/javascript">
-	$(document).ready(function(){
-	loadLayout();
-	//<!-- replace template as new block which defined in layout.html-->
-	$('#download').load('layout.html #download');
-	//<!-- done-->
-	});
-    </script>
   </body>
 </html>
