--- a/template.html
+++ b/template.html
@@ -9,23 +9,23 @@
   </head>
   <body>
     <div class="wrapper">
-      <header><div id="header"></div></header>
+    <div id="header"></div>
       <section>
-      <!-- replace template as new block which defined in layout.html-->
-      <div id="template"></div>
-      <!-- done-->
+      <div id="template">
+      <!-- Thie is start of edit area -->
+        <h3>Welcome to Partclone Template</h3>
+	<p>
+	This is Template file.
+	</p>
+      <!-- Thie is end of edit area -->
+      </div> <!-- end of template div -->
       </section>
-      <footer><div id="footer"></div></footer>
+      <div id="footer"></div>
       </div>
+    <script type="text/javascript">
+	loadLayout();
+    </script>
     <script src="javascripts/scale.fix.js"></script>
     
-    <script type="text/javascript">
-	$(document).ready(function(){
-	loadLayout();
-	//<!-- replace template as new block which defined in layout.html-->
-	$('#template').load('layout.html #template');
-	//<!-- done-->
-	});
-    </script>
   </body>
 </html>
