--- a/usage_all.html
+++ b/usage_all.html
@@ -9,23 +9,33 @@
   </head>
   <body>
     <div class="wrapper">
-      <header><div id="header"></div></header>
+    <div id="header"></div>
       <section>
-      <!-- replace template as new block which defined in layout.html-->
-      <div id="usage"></div>
-      <!-- done-->
-      </section>
-      <footer><div id="footer"></div></footer>
+      <div id="usage">
+      <!-- Thie is start of edit area -->
+        <h3>Welcome to Partclone Usage</h3>
+	<p>partclone.[ <a href="javascript:loadUsage('usage/partclone.xxxfs.8.html');">xxxfs</a> | <a href="javascript:loadUsage('usage/partclone.restore.8.html');">restore</a> | <a href="javascript:loadUsage('usage/partclone.dd.8.html');">dd</a> | <a href="javascript:loadUsage('usage/partclone.chkimg.8.html');">chkimg</a> | <a href="javascript:loadUsage('usage/partclone.info.8.html');">info</a> ]</p>
+	<div id=usage>
+	<p>All partclone utilities named prefix partclone.blabla... It's just like mkfs.xxx or mount.xxx and easy to remember. The list is our man pages made from man2html or just run man partclone to access manual from linux system.</p>
+	<ul>
+	<li><a href="javascript:loadUsage('usage/partclone.xxxfs.8.html');">partclone.xxxfs</a> <br \>The man page is for all utilities name with end of [xxx]fs, e.g. reiserfs. All file system share same options and features.</li>
+	<li><a href="javascript:loadUsage('usage/partclone.restore.8.html');">partclone.restore</a><br \>The special man page for restore only.</li>
+	<li><a href="javascript:loadUsage('usage/partclone.dd.8.html');">partclone.dd</a><br \>The special man page for partclone.dd only.</li>
+	<li><a href="javascript:loadUsage('usage/partclone.chkimg.8.html');">partclone.chkimg</a><br \>The special man page for partclone.chkimg only.</li>
+	<li><a href="javascript:loadUsage('usage/partclone.info.8.html');">partclone.info</a><br \>The special man page for partclone.info only.</li>
+	</ul>
+
+	</div>
+      <!-- Thie is end of edit area -->
       </div>
+      </section>
+
+      <div id="footer"></div>
+      </div>
+    <script type="text/javascript">
+	loadLayout();
+    </script>
     <script src="javascripts/scale.fix.js"></script>
     
-    <script type="text/javascript">
-	$(document).ready(function(){
-	loadLayout();
-	//<!-- replace template as new block which defined in layout.html-->
-	$('#usage').load('layout.html #usage');
-	//<!-- done-->
-	});
-    </script>
   </body>
 </html>
