add template apply script

--- a/template.html
+++ b/template.html
@@ -11,14 +11,16 @@
     <div class="wrapper">
     <div id="header"></div>
       <section>
-      <div id="template">
       <!-- Thie is start of edit area -->
+
+      <div id="template">
         <h3>Welcome to Partclone Template</h3>
 	<p>
 	This is Template file.
 	</p>
+      </div>
+
       <!-- Thie is end of edit area -->
-      </div> <!-- end of template div -->
       </section>
       <div id="footer"></div>
       </div>
@@ -29,3 +31,4 @@
     
   </body>
 </html>
+
