--- a/layout.html
+++ b/layout.html
@@ -17,7 +17,7 @@
 	<a href="usage_all.html">Usage</a> |
 	<a href="download.html">Download</a> |
 	<a href="help.html">Help</a> |
-	<a href="http://partclone.org/donate.php">Donation</a> |
+	<a href="donate.html">Donation</a> |
 	<a href="credits.html">Crdits</a> 
 	</p>
 
