--- a/help.html
+++ b/help.html
@@ -30,9 +30,9 @@
 	<h4>Contact Us</h4>
 	<p>
 	<ul>
-	<li>IRC: There is an IRC channel for discussion about partclone development: <strong>#partclone</strong> on <strong>irc.xxxorg</strong>.</li>
-	<li>Mailing Lists: We use source forge mailing lists system and only for member of sourceforge can sent mail.<a href="http://sourceforge.net/mailarchive/forum.php?forum_name=partclone-user" alt="mailing list of partclone">Mailing List</a></li>
-	<li>Forums: It's also source forge <a href="https://sourceforge.net/projects/partclone/forums" alt="forum of partclone">Forum</a></li>
+	<li>IRC: There is an IRC channel for discussion about partclone development: <strong>#partclone</strong> on <strong>irc.freenode.net</strong>.</li>
+	<li>Mailing Lists: We use source forge mailing lists system and only for member of sourceforge can sent mail. <a href="http://sourceforge.net/mailarchive/forum.php?forum_name=partclone-user" alt="mailing list of partclone"><strong>Mailing List</strong></a></li>
+	<li>Forums: It's also source forge <a href="https://sourceforge.net/projects/partclone/forums" alt="forum of partclone"><strong>Forum</strong></a></li>
 	<li>E-Mail: thomas _At_ nchc Dot org Dot tw</li>
 	</ul>
 	</p>
